Update and rename firstpage.html to index.html

--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
 <body>
     <span class="a">Name : Kaung Htet Hein</span> <br><br>
     <span class="a">Email : htetk8551@gmail.com</span>
+    <p>pc ပေါ်မှာတော့ app.js file နဲ့ host လုပ်ပြီး local host မှာစမ်းတာရပါတယ်ဆရာ</p>
+    <p>github မှာတော့ html file ၁ခုတည်းနဲ့အလုပ်လုပ်နေပါတယ်ဆရာ</p>
 </body>
 </html>
